# PokemonEmeraldCheats

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 61cbf82613da_initial_tables.py
app/: import_from_csv.py  main.py
app/core/: config.py  database.py
app/models/: __init__.py  pokemons.py  wild_encounters.py  wild_encounters_level.py
app/repository/: pokemons.py  wild_encounters.py  wild_encounters_level.py
app/schemas/: pokemons.py  read_full.py  wild_encounters.py  wild_encounters_level.py
app/services/: get_level_cheat.py  get_pokemon_cheats.py  get_pokemon_encounter_cheat.py
res/: pokemons.csv  wild_encounter_level_modifier_cheats.csv  wild_encounter_modifier_cheats.csv
