[project]
name = "pokemon-emerald-cheats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "pydantic>=2.12.5",
    "ruff>=0.15.9",
    "sqlalchemy>=2.0.49",
]

[tool.setuptools]
py-modules = ["app"]

[tool.ruff]
line-length = 80
lint.extend-select = ["I", "E501"]
